IJPL-62074 Bookmarks lost on branch changes
(cherry picked from commit 38f75c2995ded113b9d1ba02e820226433c4407b)

IJ-CR-202697

GitOrigin-RevId: 9848befdd74a2643bae4aa627269dbc5ebf2abd2